update resource and service category